--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "angular-mocks": "latest",
     "chai": "^3.5.0",
     "consumer-contracts": "^1.4.0",
+    "express-validator": "^2.20.8",
     "frisby": "latest",
     "jasmine-core": "^2.3.4",
     "jasmine-node": "latest",
@@ -27,7 +28,7 @@
     "back-unit-test": "mocha --opts test/back/unit/mocha.opts test/back/unit/**_spec.js",
     "contract": "node_modules/consumer-contracts/lib/cli.js run test/contract/contract_spec.js",
     "test": "node_modules/jasmine-node/bin/jasmine-node test/back/server_spec.js",
-    "start": "node back-end/server.js"
+    "start": "node back-end/server.js && open index.html"
   },
   "author": "",
   "license": "ISC"
