add joi to validate schema

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "angular-mocks": "latest",
     "chai": "^3.5.0",
     "consumer-contracts": "^1.4.0",
-    "express-validator": "^2.20.8",
     "frisby": "latest",
     "jasmine-core": "^2.3.4",
     "jasmine-node": "latest",
+    "joi": "^9.0.4",
     "karma": "^0.13.22",
     "karma-jasmine": "^0.3.8",
     "karma-phantomjs-launcher": "^0.2.1",
